--- a/assets/src/scss/bootstrap-build.scss
+++ b/assets/src/scss/bootstrap-build.scss
@@ -25,6 +25,7 @@ Text Domain: planet4-master-theme
 @import "~bootstrap/scss/mixins";
 
 // TODO: Add variable overrides for the 16px grid here.
+@import "base/grid";
 
 // Optional
 // @import "~bootstrap/scss/reboot";
