Replacing the ServerSideRenderer with a JSX version of the Twig template.
Commits squashed in this one:

- Separate the Frontend view
- Commits squashed in this one:
- Added REST method to get the Spreadsheet data from cache if available.
- Add search functionality to the React side
- Add sorting and sort order icons
- Adding arrow icons and some subtle transitions
- No-PHP version of the frontend renderer
- Add FrontendBlockNode component for consistency
- Generic frontend block renderer
- Reimplement block-scoped CSS variables in React. Remove render_callback.
- Fix PHPCS errors. Validate Sheet ID is an integer in the API endpoint.
- Turn into a fully WYSIWYG version.
  * Move the URL field to the sidebar.
  * Show a message if there is no URL yet.
  * Show a loading message only if its actually loading something
- Fix the Sheet ID filter in the endpoint.
- Take into account possible URL errors. Update the Spreadsheet on URL changes.
- PLANET-5017 Use a data attribute for rendering (by PieterV)
- Use default sorting from the spreadsheet until a header is clicked.

  Also:
  * Small fix for the frontendRendered function. Added some 'warning' comments.
  * Use the registered block name for the frontend render.
  * Make sure error messages are only for the editor side.

- Updating help message. Removing prepare_data method. Remove unused function.
- Extract HighlightMatches and CSSVariablesToText logic.
- Address review feedback.
- Use section and the .block class
- Fix PHPCS errors
- Fix stylelint errors
- Set search input font to Roboto, address some final review feedback

--- a/assets/src/styles/blocks/Spreadsheet.scss
+++ b/assets/src/styles/blocks/Spreadsheet.scss
@@ -31,6 +31,28 @@ table.spreadsheet-table {
     font-size: $font-size-sm;
     position: sticky;
     top: 0;
+
+    svg {
+      width: $space-md;
+      margin-left: $space-xs;
+      // Compensate for a small baseline misalignment
+      margin-top: -2px;
+      // Use opacity instead of `display: none` to avoid jumpyness on headers
+      opacity: 0;
+      transition: opacity .3s, transform .4s;
+    }
+
+    &.spreadsheet-sorted-by {
+      svg {
+        opacity: 1;
+      }
+
+      &.sort-desc {
+        svg {
+          transform: rotate(180deg);
+        }
+      }
+    }
   }
 
   tr {
@@ -44,6 +66,10 @@ table.spreadsheet-table {
       @include x-large-and-up {
         font-size: $font-size-xs;
       }
+
+      .highlighted-text {
+        font-weight: bold;
+      }
     }
 
     &:nth-child(odd) {
@@ -54,6 +80,11 @@ table.spreadsheet-table {
   }
 }
 
+.spreadsheet-loading {
+  padding: $space-xl;
+  text-align: center;
+}
+
 .spreadsheet-search {
   width: 350px;
   max-width: 100%;
@@ -62,21 +93,11 @@ table.spreadsheet-table {
   padding: 0 8px;
   border-color: var(--spreadsheet-header-background, $table-header-grey);
   border: 1px solid;
-}
-
-.spreadsheet-sorted-by {
-  &:after {
-    content: "\25BC";
-  }
-
-  &[data-sort-dir="desc"]:after {
-    content: "\25B2";
-  }
+  font-family: $roboto;
 }
 
 .spreadsheet-empty-message {
-  display: none;
-  margin: 0 0 16px 0;
+  padding: $space-md;
   font-size: 1.12rem;
   line-height: 1.375rem;
 
