--- a/templates/base.twig
+++ b/templates/base.twig
@@ -52,6 +52,9 @@
 
 		{{ function('wp_footer') }}
 	{% endblock %}
+
+	{% include 'photoswipe.twig' %}
+
 	<script id="countries_script" type="application/json">{% include "countries.json" %}</script>
 </body>
 </html>
