--- a/templates/blocks/content_covers.twig
+++ b/templates/blocks/content_covers.twig
@@ -27,17 +27,23 @@
 								<div class="content-covers-block-info">
 									<div class="content-covers-block-symbol">
 										{% if ( post.thumbnail ) %}
-											<a href="{{ post.link }}">
-												<img src="{{ post.thumbnail }}"
-													 alt="{{ post.alt_text }}"
-													 srcset="{{ post.srcset }}">
+											<a
+												href="{{ post.link }}"
+												data-ga-category="Content Covers"
+												data-ga-action="Image"
+												data-ga-label="n/a">
+													<img src="{{ post.thumbnail }}" alt="{{ post.alt_text }}" srcset="{{ post.srcset }}">
 											</a>
 										{% endif %}
 									</div>
 									<div class="content-covers-block-information">
 										{% if ( post.post_title ) %}
-											<a href="{{ post.link }}">
-												<h4>{{ post.post_title|e('wp_kses_post')|raw }}</h4>
+											<a
+												href="{{ post.link }}"
+												data-ga-category="Content Covers"
+												data-ga-action="Title"
+												data-ga-label="n/a">
+													<h4>{{ post.post_title|e('wp_kses_post')|raw }}</h4>
 											</a>
 										{% endif %}
 										{% if ( post.post_date ) %}
