--- a/templates/blocks/take_action_boxout.twig
+++ b/templates/blocks/take_action_boxout.twig
@@ -7,20 +7,46 @@
         {% else %}
             {% set bg_image = '' %}
         {% endif %}
-        <section id="action-card" class="cover-card single-cover dark-card-bg action-card" {{ bg_image|raw }}>
+        <section
+            id="action-card"
+            class="cover-card single-cover dark-card-bg action-card"
+            data-ga-category="Take Action Boxout"
+            data-ga-action="Image"
+            data-ga-label="n/a"
+            {{ bg_image|raw }}>
             {% if ( boxout.campaigns ) %}
                 {% for campaign in boxout.campaigns %}
-                    <a href="{{ campaign.link|default('#') }}" class="cover-card-tag">#{{ campaign.name|e('wp_kses_post')|raw }}</a>
+                    <a
+                        href="{{ campaign.link|default('#') }}"
+                        class="cover-card-tag"
+                        data-ga-category="Take Action Boxout"
+                        data-ga-action="Navigation Tag"
+                        data-ga-label="n/a">
+                            #{{ campaign.name|e('wp_kses_post')|raw }}
+                    </a>
                 {% endfor %}
             {% endif %}
             {% if ( boxout.title ) %}
-                <h2 class="cover-card-heading">{{ boxout.title|e('wp_kses_post')|raw }}</h2>
+                <h2
+                    class="cover-card-heading"
+                    data-ga-category="Take Action Boxout"
+                    data-ga-action="Title"
+                    data-ga-label="n/a">
+                        {{ boxout.title|e('wp_kses_post')|raw }}
+                </h2>
             {% endif %}
             {% if ( boxout.excerpt ) %}
                 <p>{{ boxout.excerpt|e('wp_kses_post')|excerpt(25)|raw }}</p>
             {% endif %}
             {% if ( boxout.link ) %}
-                <a class="btn btn-action btn-block cover-card-btn" {{  'true' == boxout.new_tab ? 'target="_blank"' }} href="{{ boxout.link }}">{{ boxout.link_text }}</a>
+                <a
+                    class="btn btn-action btn-block cover-card-btn" {{  'true' == boxout.new_tab ? 'target="_blank"' }}
+                    href="{{ boxout.link }}"
+                    data-ga-category="Take Action Boxout"
+                    data-ga-action="Call to Action"
+                    data-ga-label="n/a">
+                        {{ boxout.link_text }}
+                </a>
             {% endif %}
         </section>
     {% endif %}
