PLANET-5060 Add correct background colors to Take Action card button

--- a/assets/src/styles/blocks/Covers/TakeActionCovers.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionCovers.scss
@@ -132,8 +132,13 @@
 
     .btn {
       display: block;
-      background-color: $orange-hover;
-      border-color: $orange-hover;
+      background-color: $orange;
+      border-color: $orange;
+
+      &:hover {
+        background-color: $orange-hover;
+        border-color: $orange-hover;
+      }
     }
   }
 
