PLANET-5081 Add option for enhanced mobile Donate button in settings

--- a/templates/navigation-bar.twig
+++ b/templates/navigation-bar.twig
@@ -76,7 +76,7 @@
 			{% endfor %}
 			<li class="nav-item donate-nav-item">
 				<a
-					class="btn btn-donate"
+					class="btn btn-donate {{ enhanced_donate_btn_class }}"
 					href="{{ donatelink }}"
 					data-ga-category="Menu Navigation"
 					data-ga-action="Donate"
