PLANET-5060 Use overlay to make whole Take Action card clickable

--- a/assets/src/styles/blocks/Covers/TakeActionCovers.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionCovers.scss
@@ -75,6 +75,20 @@
   background-position: top;
   color: $grey-80;
 
+  .cover-card-content {
+    position: relative;
+    pointer-events: none;
+    z-index: 1;
+  }
+
+  .cover-card-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+  }
+
   @include medium-and-up {
     flex-basis: 48%;
     min-height: 414px;
@@ -178,15 +192,15 @@
     transition: color 100ms linear;
     color: $white;
     text-shadow: 1px 1px 3px $black;
+    display: table;
+    z-index: 1;
+    pointer-events: all;
+    font-family: $roboto;
 
     @include large-and-up {
       font-size: 1.5rem;
       margin-top: 8px;
       max-width: 100%;
-    }
-
-    &.clickable:hover {
-      text-decoration: underline;
     }
   }
 
@@ -218,8 +232,11 @@
   text-shadow: 1.5px 1.5px 1.5px $black;
   font-weight: 800;
   font-family: $roboto;
+  pointer-events: all;
+  position: relative;
 
   &:hover {
+    text-decoration: underline;
     color: $yellow;
   }
 
@@ -238,6 +255,8 @@
   margin: $n15 auto;
   width: 92%;
   display: none;
+  z-index: 1;
+  pointer-events: all;
 }
 
 .load-more-covers-button-div {
