--- a/src/base/_body.scss
+++ b/src/base/_body.scss
@@ -8,7 +8,7 @@ body {
   font-family: $lora;
   position: relative;
   overflow-y: hidden;
-  background-color: $white;
+  background-color: var(--body_background_color, $white);
 
   &.search {
     font-family: $roboto;
