PLANET-5114 Add css variables for easier child-theme customisation

--- a/assets/src/styles/blocks/Covers/TakeActionCovers.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionCovers.scss
@@ -144,14 +144,14 @@
       }
     }
 
-    .btn {
+    .cover-card-btn {
       display: block;
-      background-color: $orange;
-      border-color: $orange;
+      background-color: var(--cover-card-btn_background_color, $orange);
+      border-color: var(--cover-card-btn_border_color, $orange);
 
       &:hover {
-        background-color: $orange-hover;
-        border-color: $orange-hover;
+        background-color: var(--cover-card-btn_hover_background_color, $orange-hover);
+        border-color: var(--cover-card-btn_hover_border_color, $orange-hover);
       }
     }
   }
@@ -190,7 +190,7 @@
     padding-top: 0;
     max-width: 80%;
     transition: color 100ms linear;
-    color: $white;
+    color: var(--cover-card-heading_color, $white);
     text-shadow: 1px 1px 3px $black;
     display: table;
     z-index: 1;
@@ -201,6 +201,10 @@
       font-size: 1.5rem;
       margin-top: 8px;
       max-width: 100%;
+    }
+
+    &:hover {
+      color: var(--cover-card-heading_hover_color, $white);
     }
   }
 
@@ -225,7 +229,8 @@
 }
 
 .cover-card-tag {
-  color: $yellow;
+  color: var(--cover-card-tag_color, $yellow);
+  background-color: var(--cover-card-tag_background_color, transparent);
   display: inline-block;
   margin-bottom: 8px;
   text-decoration: none;
@@ -237,7 +242,7 @@
 
   &:hover {
     text-decoration: underline;
-    color: $yellow;
+    color: var(--cover-card-tag_hover_color, $yellow);
   }
 
   @include large-and-up {
