--- a/assets/src/styles/blocks/Articles.scss
+++ b/assets/src/styles/blocks/Articles.scss
@@ -94,8 +94,9 @@
   font-size: 1.25rem;
   line-height: 1.3;
   font-weight: 500;
-  color: $dark-shade-black;
+  color: var(--article-list-item-headline_color, $dark-shade-black);
   margin: $space-xxs 0;
+  display: table;
 
   @include large-and-up {
     font-size: 1.375rem;
@@ -104,10 +105,14 @@
   @include x-large-and-up {
     font-size: 1.5rem;
   }
+
+  &:hover {
+    color: var(--article-list-item-headline_hover_color, $dark-shade-black);
+  }
 }
 
 .article-list-item-meta {
-  color: $grey-60;
+  color: var(--article-list-item-meta_color, $grey-60);
   font-family: $roboto;
   font-style: italic;
   font-size: 0.875rem;
