--- a/assets/src/styles/blocks/Covers/CampaignCovers.scss
+++ b/assets/src/styles/blocks/Covers/CampaignCovers.scss
@@ -105,6 +105,7 @@
         text-align: center;
         font-size: $font-size-md;
         font-family: $roboto;
+        background-color: transparent;
         color: $yellow;
         font-weight: 500;
         position: absolute;
@@ -127,6 +128,8 @@
 
         &:hover {
           text-decoration: none;
+          background-color: transparent;
+          color: $yellow;
         }
       }
     }
