--- a/assets/src/styles/editorOverrides.scss
+++ b/assets/src/styles/editorOverrides.scss
@@ -74,7 +74,7 @@
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  color: $white;
+  color: var(--btn_color, $white);
   font-weight: 500;
   border-radius: 0;
   border: 1px solid transparent;
@@ -89,9 +89,9 @@
 
 .wp-block-button.is-style-secondary .wp-block-button__link[role="textbox"],
 [class="wp-block-button"] .wp-block-button__link[role="textbox"] {
-  background-color: transparentize($white, .7);
-  border-color: $dark-blue;
-  color: $dark-blue;
+  background-color: var(--btn-secondary_background_color, transparentize($white, .7));
+  border-color: var(--btn-secondary_border_color, $dark-blue);
+  color: var(--btn-secondary_color, $dark-blue);
   box-shadow: none;
   font-size: $font-size-xxs;
   white-space: nowrap;
@@ -107,13 +107,13 @@
 }
 
 .wp-block-button.is-style-cta .wp-block-button__link[role="textbox"] {
-  background-color: $orange;
+  background-color: var(--btn-primary_background_color, $orange);
   box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
 }
 
 .wp-block-button.is-style-donate .wp-block-button__link[role="textbox"] {
-  background-color: $aquamarine;
-  color: $grey;
+  background-color: var(--btn-donate_background_color, $aquamarine);
+  color: var(--btn-donate_color, $grey);
   font-size: $font-size-sm;
   line-height: 1.65;
   min-width: 180px;
