--- a/assets/src/styles/blocks/core-overrides/Separator.scss
+++ b/assets/src/styles/blocks/core-overrides/Separator.scss
@@ -4,6 +4,13 @@
   border-bottom: 2px solid #8f98a1;
   margin-left: auto;
   margin-right: auto;
+  margin-top: $space-xs;
+  margin-bottom: $space-md;
+
+  @include large-and-up {
+    margin-top: $space-md;
+    margin-bottom: $space-lg;
+  }
 
   &:not(.is-style-wide):not(.is-style-dots) {
     max-width: 100px;
