Replacing grey colors

--- a/src/base/_body.scss
+++ b/src/base/_body.scss
@@ -4,7 +4,7 @@ body {
 }
 
 body {
-  color: $dark-shade-black;
+  color: $grey-80;
   font-family: $lora;
   position: relative;
   overflow-y: hidden;
