--- a/src/components/_blockquote.scss
+++ b/src/components/_blockquote.scss
@@ -33,7 +33,7 @@ blockquote > p {
 blockquote > h5 {
   @include blockquote;
   font-family: $lora;
-  color: $dark-shade-black;
+  color: $grey-80;
   font-size: $font-size-xxl;
 
   @include medium-and-up {
@@ -44,7 +44,7 @@ blockquote > h5 {
 blockquote > h6 {
   @include blockquote;
   font-family: $lora;
-  color: $dark-shade-black;
+  color: $grey-80;
   font-size: $font-size-xl;
 
   @include medium-and-up {
