--- a/src/layout/_page-header.scss
+++ b/src/layout/_page-header.scss
@@ -64,7 +64,7 @@
 }
 
 .page-header {
-  color: $dark-shade-black;
+  color: $grey-80;
   padding-top: $n90;
   margin-bottom: $space-md;
   position: relative;
