--- a/src/base/_colors.scss
+++ b/src/base/_colors.scss
@@ -70,6 +70,10 @@ $blue-60: #63bbfd;
 $blue-40: #86cafb;
 $blue-20: #b8e0fa;
 
+// Link colors
+$link-color: #006dfd; // hsl(214, 100%, 50%);
+$link-hover-color: #0058cc; // hsl(214, 100%, 40%);
+
 // Yellow
 //
 // $yellow - #ffd204;
