--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -62,6 +62,7 @@
 .btn-primary,
 .wp-block-button.is-style-cta a {
   background-color: $orange;
+  color: var(--btn-primary-color, $white);
   box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
 
   &:hover,
@@ -162,8 +163,8 @@
 
 .btn-donate,
 .wp-block-button.is-style-donate a {
-  background-color: var(--btn-donate_background_color, $aquamarine);
-  color: var(--btn-donate_color, $grey);
+  background-color: var(--btn-donate-background-color, $aquamarine);
+  color: var(--btn-donate-color, $grey);
   font-size: $font-size-sm;
   line-height: 1.65;
   min-width: 180px;
@@ -174,12 +175,12 @@
 
   &:hover,
   &:focus {
-    background-color: var(--btn-donate_hover_background_color, $spray);
-    color: var(--btn-donate_hover_color, $dark-shade-black);
+    background-color: var(--btn-donate-hover-background-color, $spray);
+    color: var(--btn-donate-hover-color, $dark-shade-black);
   }
 
   &:active {
-    background-color: var(--btn-donate_active_background_color, $java-dark);
+    background-color: var(--btn-donate-active-background-color, $java-dark);
   }
 
   @include large-and-up {
