--- a/assets/src/styles/blocks/Counter.scss
+++ b/assets/src/styles/blocks/Counter.scss
@@ -4,6 +4,10 @@
   margin-top: $space-xl;
   margin-bottom: $space-xl;
 
+  .page-section-description {
+    white-space: pre-wrap;
+  }
+
   .enform-extra-header-placeholder & {
     margin-top: 40px;
     margin-bottom: 30px;
