Change grey shades and pin styleguide commit.

--- a/assets/src/scss/pages/_404.scss
+++ b/assets/src/scss/pages/_404.scss
@@ -1,6 +1,6 @@
 .page-404-page {
   .page-header {
-    color: $dark-shade-black;
+    color: $grey-80;
     min-height: 1200px;
     padding-top: 80px;
 
