--- a/assets/src/scss/pages/post/_comments-block.scss
+++ b/assets/src/scss/pages/post/_comments-block.scss
@@ -70,7 +70,7 @@
 .single-comment-meta {
   font-size: $font-size-xxs;
   font-weight: 500;
-  color: $dark-shade-black;
+  color: $grey-80;
   text-decoration: none;
   display: block;
 
