--- a/assets/src/scss/pages/post/_post.scss
+++ b/assets/src/scss/pages/post/_post.scss
@@ -28,7 +28,7 @@
     }
 
     h1 {
-      color: $dark-shade-black;
+      color: $grey-80;
       hyphens: none;
       line-height: 1.2;
 
@@ -40,7 +40,7 @@
     }
 
     .single-post-meta {
-      color: $dark-shade-black;
+      color: $grey-80;
       margin: 0 0 16px 0;
       font-size: 0.8125rem;
       font-weight: 300;
