--- a/assets/src/scss/pages/search/_search-results.scss
+++ b/assets/src/scss/pages/search/_search-results.scss
@@ -247,7 +247,7 @@
 }
 
 .search-result-item-content {
-  color: $dark-shade-black;
+  color: $grey-80;
   font-size: $font-size-sm;
   font-family: $lora;
   line-height: 1.6;
