--- a/assets/src/scss/pages/search/_filter-sidebar.scss
+++ b/assets/src/scss/pages/search/_filter-sidebar.scss
@@ -148,7 +148,7 @@
       color: $white;
 
       &:hover {
-        color: $dark-shade-black;
+        color: $grey-80;
         cursor: pointer;
       }
 
