--- a/assets/src/scss/pages/search/_search-bar.scss
+++ b/assets/src/scss/pages/search/_search-bar.scss
@@ -24,7 +24,7 @@
   .btn-secondary {
     background-color: transparentize($white, .8);
     border-color: $grey-20;
-    color: $dark-shade-black;
+    color: $grey-80;
     text-transform: capitalize;
     width: 50%;
     cursor: pointer;
