Replace grey shades and pin styleguide commit.

--- a/assets/src/styles/blocks/Articles.scss
+++ b/assets/src/styles/blocks/Articles.scss
@@ -92,7 +92,7 @@
 
 .article-list-item-headline {
   font-weight: 500;
-  color: var(--article-list-item-headline-color, $dark-shade-black);
+  color: var(--article-list-item-headline-color, $grey-80);
   margin: $space-xxs 0;
 }
 
