--- a/assets/src/styles/blocks/Gallery_carousel.scss
+++ b/assets/src/styles/blocks/Gallery_carousel.scss
@@ -3,7 +3,7 @@
 
   h1 {
     font-size: $font-size-lg;
-    color: $dark-shade-black;
+    color: $grey-80;
     margin-bottom: 22px;
     margin-left: 0;
 
