--- a/assets/src/styles/blocks/Happypoint.scss
+++ b/assets/src/styles/blocks/Happypoint.scss
@@ -81,7 +81,7 @@
       font-size: $font-size-xl;
       line-height: 34px;
       margin-bottom: 20px;
-      color: $dark-shade-black;
+      color: $grey-80;
     }
 
     @include large-and-up {
