--- a/assets/src/styles/editorOverrides.scss
+++ b/assets/src/styles/editorOverrides.scss
@@ -133,7 +133,7 @@
   background-color: $white;
   border-radius: 0;
   border: none;
-  color: $dark-shade-black !important;
+  color: $grey-80 !important;
 }
 
 // The color picker cannot be configured to show a clear button without giving the ability to enter any color with its
