--- a/assets/src/styles/blocks/SocialMediaCards.scss
+++ b/assets/src/styles/blocks/SocialMediaCards.scss
@@ -39,7 +39,7 @@
           height: 100%;
           width: 12%;
           margin: 0 11%;
-          color: $dark-shade-black;
+          color: $grey-80;
 
           img {
             min-height: 22px;
