--- a/templates/blocks/enform.twig
+++ b/templates/blocks/enform.twig
@@ -77,7 +77,7 @@
 
 						</div>
 
-						{% embed 'tease-thankyou.twig' %}
+						{% embed 'enform/tease-thankyou.twig' %}
 						{% endembed %}
 
 					</div>
