PLANET-4323 Fix checkbox label on MENA sites

--- a/assets/src/styles/blocks/ENForm/components/_enform-side-style.scss
+++ b/assets/src/styles/blocks/ENForm/components/_enform-side-style.scss
@@ -103,6 +103,12 @@
       label {
         margin-bottom: 0;
       }
+
+      p {
+        html[dir="rtl"] & {
+          display: inline;
+        }
+      }
     }
   }
 
