PLANET-5080 Update Columns block description margin bottom

--- a/assets/src/styles/blocks/Columns.scss
+++ b/assets/src/styles/blocks/Columns.scss
@@ -67,8 +67,13 @@
       p {
         flex-grow: 1;
 
+        &:last-child {
+          margin-bottom: 0;
+        }
+
         @include medium-and-up {
           width: auto;
+          margin-bottom: $space-lg;
         }
 
         @include large-and-up {
@@ -137,11 +142,6 @@
 
         &.call-to-action-link {
           position: relative;
-
-          @include medium-and-up {
-            position: absolute;
-            bottom: 0;
-          }
         }
       }
 
