Revert two EN colors removal

--- a/src/base/_colors.scss
+++ b/src/base/_colors.scss
@@ -67,6 +67,7 @@ $link-hover-color: #0058cc; // hsl(214, 100%, 40%);
 //
 // Styleguide Style.colors.yellow
 $yellow: #ffd204;
+$yellow-20: #fff6cd;
 
 // Orange
 //
@@ -102,6 +103,7 @@ $comment-block:#e7ecf0;
 $comment-text: #d1dce2;
 
 // Various reds:
+$peach:       #eaccbb;
 $crimson:     #e51538;
 $red:         #a01604;
 
