--- a/templates/tease-search.twig
+++ b/templates/tease-search.twig
@@ -52,7 +52,7 @@
 								class="search-result-item-head no-btn tag-item tag-item--main page-type"
 								href="{{ page_type.link }}"
 								data-ga-category="Search Results"
-								data-ga-action="Category Tag"
+								data-ga-action="Post Type Tag"
 								data-ga-label="{{ ga_page_type }}">
 									{{ page_type.name|e('wp_kses_post')|raw }}
 							</a>
