--- a/templates/blocks/columns.twig
+++ b/templates/blocks/columns.twig
@@ -25,7 +25,9 @@
 											<a
 												href="{{ col.cta_link|e('esc_url') }}"
 												{{  col.link_new_tab and col.link_new_tab != "false" ? 'target="_blank"' }}
-											>
+												data-ga-category="Columns Block"
+												data-ga-action="{{ fields.columns_block_style == 'icons' ? 'Icon' : 'Image' }}"
+												data-ga-label="{{ col.cta_link|e('esc_url') }}">
 										{% endif %}
 											<img src="{{ col.attachment }}" alt="{{ col.title }}">
 										{% if col.cta_link %}
@@ -34,11 +36,22 @@
 									</div>
 								{% endif %}
 
-								<h3>
-									{% if col.cta_link and not is_campaign %}<a href="{{ col.cta_link|e('esc_url') }}">{% endif %}
-										{{ col.title|e('wp_kses_post')|raw }}
-										{% if col.cta_link and not is_campaign %}</a>{% endif %}
-								</h3>
+								{% if col.cta_link and is_campaign %}
+									<h3
+										data-ga-category="Columns Block"
+										data-ga-action="Title"
+										data-ga-label="n/a">
+								{% elseif col.cta_link %}
+									<h3>
+										<a
+											href="{{ col.cta_link|e('esc_url') }}"
+											data-ga-category="Columns Block"
+											data-ga-action="Title"
+											data-ga-label="{{ col.cta_link|e('esc_url') }}">
+								{% endif %}
+											{{ col.title|e('wp_kses_post')|raw }}
+								{% if col.cta_link and not is_campaign %}</a>{% endif %}
+									</h3>
 								{% if col.description %}
 									<p>{{ col.description|e('wp_kses_post')|raw|nl2br }}</p>
 								{% endif %}
@@ -49,7 +62,10 @@
 											class="btn {{ is_campaign ? 'btn-primary' : 'btn-secondary' }}"
 										{% else %}
 											class="call-to-action-link"
-										{% endif %}>
+										{% endif %}
+											data-ga-category="Columns Block"
+											data-ga-action="Call to Action"
+											data-ga-label="{{ col.cta_link|e('esc_url') }}">
 										{{ col.cta_text|e('wp_kses_post')|raw }}
 									</a>
 								{% endif %}
