--- a/templates/blocks/header.twig
+++ b/templates/blocks/header.twig
@@ -17,7 +17,14 @@
 					{% if ( post.issues_nav_data ) %}
 						<div class="tag-wrap issues">
 							{% for issue in post.issues_nav_data %}
-								<a class="tag-item tag-item--main" href="{{ issue.link|default('#') }}">{{ issue.name|e('wp_kses_post')|raw }}</a>
+								<a
+									class="tag-item tag-item--main"
+									href="{{ issue.link|default('#') }}"
+									data-ga-category="Header"
+									data-ga-action="Category Tag"
+									data-ga-label="n/a">
+										{{ issue.name|e('wp_kses_post')|raw }}
+								</a>
 							{% endfor %}
 						</div>
 					{% endif %}
@@ -25,7 +32,14 @@
 					{% if ( campaigns ) %}
 						<div class="tag-wrap issues">
 							{% for campaign in campaigns %}
-								<a class="tag-item tag" href="{{ campaign.link|default('#') }}">#{{ campaign.name|e('wp_kses_post')|raw }}</a>
+								<a
+									class="tag-item tag"
+									href="{{ campaign.link|default('#') }}"
+									data-ga-category="Header"
+									data-ga-action="Navigation Tag"
+									data-ga-label="n/a">
+										#{{ campaign.name|e('wp_kses_post')|raw }}
+								</a>
 							{% endfor %}
 						</div>
 					{% endif %}
@@ -47,11 +61,17 @@
 				{% if ( header_button_title and header_button_link ) %}
 					<div class="row">
 						<div class="col-md-12">
-							<a href="{{ header_button_link }}"
-									{% if ( header_button_link_checkbox ) %}
-										target="_blank"
-									{% endif %}
-							class="btn btn-primary btn-medium page-header-btn">{{ header_button_title }}</a>
+							<a
+								href="{{ header_button_link }}"
+							{% if ( header_button_link_checkbox ) %}
+								target="_blank"
+							{% endif %}
+								class="btn btn-primary btn-medium page-header-btn"
+								data-ga-category="Header"
+								data-ga-action="Call to Action"
+								data-ga-label="n/a">
+									{{ header_button_title }}
+							</a>
 						</div>
 					</div>
 				{% endif %}
