--- a/templates/single.twig
+++ b/templates/single.twig
@@ -20,7 +20,14 @@
 					{% if ( post.issues_nav_data ) %}
 						<div class="tag-wrap issues">
 							{% for issue in post.issues_nav_data %}
-								<a class="tag-item tag-item--main" href="{{ issue.link|default('#') }}">{{ issue.name|e('wp_kses_post')|raw }}</a>
+								<a
+									class="tag-item tag-item--main"
+									href="{{ issue.link|default('#') }}"
+									data-ga-category="Header"
+									data-ga-action="Category Tag"
+									data-ga-label="n/a">
+										{{ issue.name|e('wp_kses_post')|raw }}
+								</a>
 							{% endfor %}
 						</div>
 					{% endif %}
@@ -28,7 +35,14 @@
 					{% if (post.tags) %}
 						<div class="tag-wrap tags">
 							{% for tag in post.tags %}
-								<a class="tag-item tag" href="{{ tag.link }}">#{{ tag.name|e('wp_kses_post')|raw }}</a>
+								<a
+									class="tag-item tag"
+									href="{{ tag.link }}"
+									data-ga-category="Header"
+									data-ga-action="Navigation Tag"
+									data-ga-label="n/a">
+									#{{ tag.name|e('wp_kses_post')|raw }}
+								</a>
 							{% endfor %}
 						</div>
 					{% endif %}
