Replace grey shades and pin styleguide commit

--- a/assets/src/styles/blocks/ENForm/components/_enform.scss
+++ b/assets/src/styles/blocks/ENForm/components/_enform.scss
@@ -184,7 +184,7 @@
         }
 
         & + .custom-control-description:before {
-          border: 1px solid $dark-shade-black;
+          border: 1px solid $grey-80;
           vertical-align: middle;
 
           .enform-full-width-bg & {
