--- a/assets/src/styles/blocks/core-overrides/Image.scss
+++ b/assets/src/styles/blocks/core-overrides/Image.scss
@@ -2,15 +2,26 @@
   position: relative;
   width: auto;
   max-width: 100%;
+  margin-top: $space-xs;
+  margin-bottom: $space-md;
 
-  figure:not(.alignleft):not(.alignright) {
-    margin-top: $space-xs;
-    margin-bottom: $space-md;
+  @include large-and-up {
+    margin-top: $space-md;
+    margin-bottom: $space-lg;
+  }
 
-    @include large-and-up {
-      margin-top: $space-md;
-      margin-bottom: $space-lg;
-    }
+  figure {
+    position: relative;
+  }
+
+  .alignleft {
+    margin: 0 $n10 $n10 0;
+    padding-top: 6px;
+  }
+
+  .alignright {
+    margin: 0 0 $n10 $n10;
+    padding-top: 6px;
   }
 
   @include medium-and-up {
@@ -22,10 +33,6 @@
       color: $white;
       z-index: 2;
     }
-  }
-
-  figure {
-    position: relative;
   }
 
   img {
@@ -42,16 +49,6 @@
   }
 
   &.caption-style-blue-overlay {
-    .alignnone {
-      margin-bottom: $space-xl;
-      margin-top: $space-md;
-
-      @include large-and-up {
-        margin-bottom: $space-xxl;
-        margin-top: $space-lg;
-      }
-    }
-
     .image-desc {
       display: block;
     }
@@ -100,4 +97,8 @@ figcaption {
   .caption-alignment-right & {
     text-align: right;
   }
+}
+
+figure.wp-block-image {
+  display: inline-block;
 }
