PLANET-4801 Import breadcrumbs styles from styleguide, for tags

--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -15,6 +15,7 @@
 @import "styleguide/src/layout/tables";
 @import "styleguide/src/layout/navbar";
 @import "styleguide/src/layout/page-header";
+@import "styleguide/src/layout/breadcrumbs";
 
 @import "blocks/TableEditor";
 
