Change H1 font size on mobile to 2.5rem (xxl)

--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -53,7 +53,7 @@ h6 {
 h1 {
   line-height: 1.225;
   margin-bottom: 30px;
-  font-size: $font-size-xxxl;
+  font-size: $font-size-xxl;
 
   @include medium-and-up {
     font-size: $font-size-xxxxl;
